--- a/tarea2/Makefile
+++ b/tarea2/Makefile
@@ -1,11 +1,17 @@
-CC = g++
-CFLAGS = -std=c++11 $(shell pkg-config --cflags opencv4)
-LIBS = $(shell pkg-config --libs opencv4)
+CC=g++
+CFLAGS=-std=c++11 $(shell pkg-config --cflags opencv4)
+LIBS=$(shell pkg-config --libs opencv4)
 
-all: secuencial
+all: paralelo_openMP paralelo_thread secuencial
+
+paralelo_openMP: paralelo_openMP.cpp
+	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
+
+paralelo_thread: paralelo_thread.cpp
+	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
 
 secuencial: secuencial.cpp
-	$(CC) $(CFLAGS) -o secuencial secuencial.cpp $(LIBS)
+	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
 
 clean:
-	rm -f secuencial
+	rm -f paralelo_openMP paralelo_thread secuencial
