Orden en código
Se ordena cada programa en su carpeta, teniendo los ejecutables en la carpeta raiz

--- a/tarea2/Makefile
+++ b/tarea2/Makefile
@@ -1,17 +1,17 @@
-CC=g++
-CFLAGS=-std=c++11 $(shell pkg-config --cflags opencv4)
-LIBS=$(shell pkg-config --libs opencv4)
+CC = g++
+CFLAGS = -std=c++11 $(shell pkg-config --cflags opencv4)
+LIBS = $(shell pkg-config --libs opencv4)
 
-all: paralelo_openMP paralelo_thread secuencial
+all: secuencial paralelo_thread paralelo_openMP
 
-paralelo_openMP: paralelo_openMP.cpp
-	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
+secuencial: secuencial_carpeta/secuencial.cpp
+	$(CC) $(CFLAGS) $< -o $@ $(LIBS)
 
-paralelo_thread: paralelo_thread.cpp
-	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
+paralelo_thread: paralelo_thread_carpeta/paralelo_thread.cpp
+	$(CC) $(CFLAGS) -pthread $< -o $@ $(LIBS)
 
-secuencial: secuencial.cpp
-	$(CC) $(CFLAGS) -o $@ $^ $(LIBS)
+paralelo_openMP: paralelo_openMP_carpeta/paralelo_openMP.cpp
+	$(CC) $(CFLAGS) -fopenmp $< -o $@ $(LIBS)
 
 clean:
-	rm -f paralelo_openMP paralelo_thread secuencial
+	rm -f secuencial paralelo_thread paralelo_openMP
